--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,10 @@
 <title>CM6 demo</title>
 
 <style>
-.cm-editor { height: 300px; border: 1px solid #ddd}
+.cm-editor { height: 600px; border: 1px solid #ddd}
 .cm-scroller { overflow: auto; }
 </style>
 
-<h1>CM6</h1>
-
+<h1>CM6dslkfsdjdfkl;j</h1>
+<div id="editor" style="border: black solid 3px;"></div>
 <script type=module src="_m/demo.js"></script>
